added week 9 (intro to Maya / modularity) and week 10 (review of Maya / return to raycasts and code)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ buildingworlds_week4/Temp/
 *.sln
 buildingworlds_week5/Library/
 buildingworlds_week5/Temp/
+buildingworlds_week9/Library/
+buildingworlds_week10\Library/
+buildingworlds_week10/Library/
