pushed week12; fish model, fish swimming

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ buildingworlds_week5/Temp/
 buildingworlds_week9/Library/
 buildingworlds_week10\Library/
 buildingworlds_week10/Library/
+buildingworlds_week12/Library/
+buildingworlds_week12/Temp/
