added week 13, flocking code

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ buildingworlds_week10\Library/
 buildingworlds_week10/Library/
 buildingworlds_week12/Library/
 buildingworlds_week12/Temp/
+buildingworlds_week13/Library/
+buildingworlds_week13/Temp/
